<resources>

    <string name="student_login">Student Login</string>
    <string name="app_name">TnP</string>
    <string name="swipe_left">Swipe Left for Admin Login</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="enter_details">Enter your details to view and manage your information</string>
    <string name="swipe_right">Swipe Right for Student Login</string>
    <string name="admin_login">Admin Login</string>
    <string name="edit_icon_text"><u>Edit</u></string>
    <string name="partition_section">Partition section</string>
    <string name="share_experience">SHARE EXPERIENCE</string>
    <string name="company_name">COMPANY NAME:</string>
    <string name="logo">Logo</string>
    <string name="roll_no">ROLL NO:</string>
    <string name="cgpa">CGPA:</string>
    <string name="stream">STREAM:</string>
    <string name="backlogs">BACKLOGS:</string>
    <string name="institution">INSTITUTION:</string>
    <string name="dashboard">CCOEW Dashboard</string>
    <string name="name">Name</string>
    <string name="write_your_experience_here">Write your experience here</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="view_students_list">LIST OF STUDENTS PLACED</string>
    <string name="company_details">COMPANY DETAILS</string>
    <string name="job_details">JOB DETAILS</string>
    <string name="eligibility_criteria">ELIGIBILITY CRITERIA</string>
    <string name="min_cgpa">MINIMUM CGPA:</string>
    <string name="max_backlogs">MAXIMUM BACKLOGS:</string>
    <string name="streams">STREAMS:</string>
    <string name="location">LOCATION:</string>
    <string name="job_description">JOB DESCRIPTION:</string>
    <string name="stipend">STIPEND:</string>
    <string name="additional_details">ADDITIONAL DETAILS</string>
    <string name="write_additional_details_here">Write additional details here</string>
    <string name="delete">DELETE</string>
    <string name="enter_company_name">ENTER COMPANY NAME:</string>
    <string name="delete_company_from_database">DELETE COMPANY FROM DATABASE</string>
    <string name="view_student_experiences">VIEW STUDENT EXPERIENCES</string>
    <string name="full_name">FULL NAME:</string>
    <string name="student_details">STUDENT DETAILS</string>
    <string name="student_registration">STUDENT REGISTRATION</string>
    <string name="address">ADDRESS:</string>
    <string name="contact_information">CONTACT INFORMATION</string>
    <string name="contact_no">CONTACT NO:</string>
    <string name="write_address_here">Write your address here</string>
    <string name="enter_password">ENTER PASSWORD:</string>
    <string name="reenter_password">RE-ENTER PASSWORD:</string>
    <string name="edit_details">EDIT DETAILS</string>
    <string name="welcome">Welcome</string>
    <string name="student_name">STUDENT NAME:</string>
    <string name="experience">EXPERIENCE:</string>
    <string name="no_of_students_placed">NO. OF STUDENTS PLACED</string>
    <string name="enter_your_address_here">Enter your address here</string>
    <string name="number_of_students_placed">Number of Students Placed:</string>
</resources>
