<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLight"
    tools:context=".LoginFragment">

    <TextView
        android:id="@+id/student_login_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/enter_details_text_student"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/archivo_black"
        android:text="@string/student_login"
        android:textColor="@color/colorAccent"
        android:textSize="50sp" />

    <TextView
        android:id="@+id/enter_details_text_student"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/email_placeholder_student"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="50dp"
        android:text="@string/enter_details"
        android:textSize="17sp" />

    <EditText
        android:id="@+id/email_placeholder_student"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_above="@id/password_placeholder_student"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/et_custom"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="15dp"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/password_placeholder_student"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_centerInParent="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/et_custom"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textSize="15sp" />

    <Button
        android:id="@+id/button_login_student"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_placeholder_student"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/btn_custom"
        android:text="@string/login"
        android:textColor="@android:color/white" />

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_above="@id/swipeLeft"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_arrow_right" />

    <TextView
        android:id="@+id/swipeLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:text="@string/swipe_left"
        android:textSize="15sp" />

</RelativeLayout>