<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="0dp"
        app:cardPreventCornerOverlap="false">

        <RelativeLayout
            android:id="@+id/container_company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/translucent_white"
            android:padding="20dp">

            <TextView
                android:id="@+id/company_name_label_list_companies"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/playfair_display"
                android:text="@string/company_name"
                android:textColor="@color/black"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/company_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_alignBaseline="@id/company_name_label_list_companies"
                android:layout_toEndOf="@id/company_name_label_list_companies"
                android:fontFamily="@font/playfair_display"
                android:textColor="@color/black"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/min_cgpa_label_list_companies"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/company_name_label_list_companies"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/playfair_display"
                android:text="@string/min_cgpa"
                android:textColor="@color/black"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/min_cgpa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/min_cgpa_label_list_companies"
                android:layout_below="@id/company_title"
                android:layout_toEndOf="@id/min_cgpa_label_list_companies"
                android:layout_marginStart="4dp"
                android:fontFamily="@font/playfair_display"
                android:textColor="@color/black"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/max_backlog_label_list_companies"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/min_cgpa_label_list_companies"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/playfair_display"
                android:text="@string/max_backlogs"
                android:textColor="@color/black"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/max_backlog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/min_cgpa"
                android:layout_toEndOf="@id/max_backlog_label_list_companies"
                android:layout_alignBaseline="@id/max_backlog_label_list_companies"
                android:layout_marginStart="4dp"
                android:fontFamily="@font/playfair_display"
                android:textColor="@color/black"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/stream_label_list_companies"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/max_backlog_label_list_companies"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/playfair_display"
                android:text="@string/streams"
                android:textColor="@color/black"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/stream"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/max_backlog"
                android:layout_toEndOf="@id/stream_label_list_companies"
                android:layout_alignBaseline="@id/stream_label_list_companies"
                android:layout_marginStart="4dp"
                android:fontFamily="@font/playfair_display"
                android:textColor="@color/black"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/job_description_label_list_companies"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/stream_label_list_companies"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/playfair_display"
                android:text="@string/job_description"
                android:textColor="@color/black"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/job_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/stream"
                android:layout_toEndOf="@id/job_description_label_list_companies"
                android:layout_alignBaseline="@id/job_description_label_list_companies"
                android:layout_marginStart="4dp"
                android:fontFamily="@font/playfair_display"
                android:textColor="@color/black"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/location_label_list_companies"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/job_description_label_list_companies"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/playfair_display"
                android:text="@string/location"
                android:textColor="@color/black"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/job_description"
                android:layout_toEndOf="@id/location_label_list_companies"
                android:layout_alignBaseline="@id/location_label_list_companies"
                android:layout_marginStart="4dp"
                android:fontFamily="@font/playfair_display"
                android:textColor="@color/black"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/stipend_label_list_companies"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/location_label_list_companies"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/playfair_display"
                android:text="@string/stipend"
                android:textColor="@color/black"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/stipend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/location"
                android:layout_toEndOf="@id/stipend_label_list_companies"
                android:layout_alignBaseline="@id/stipend_label_list_companies"
                android:layout_marginStart="4dp"
                android:fontFamily="@font/playfair_display"
                android:textColor="@color/black"
                android:textSize="20dp" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>